--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://limbo-hacks.github.io/Hackathon-website-template/",
-  "name": "hackathon-website-template",
+  "homepage": "https://OrcaOverdrive.github.io",
+  "name": "Orca Overdrive Website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +21,7 @@
     "babel": "^6.23.0",
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "prettier": "^2.3.2",
     "prettierrc": "0.0.0-5",
     "react": "^17.0.2",
@@ -35,7 +35,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.3",
     "typed.js": "^2.0.12",
