Update to the site with added sponsors etc

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://OrcaOverdrive.github.io",
+  "homepage": "https://OrcaOverdrive.com",
   "name": "OrcaOverdrive-website",
   "version": "0.1.0",
   "private": true,
